"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2012-05-30	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-37:
	  hacknet: added 'emit_port_summary' option to print port
		direction information in comment block.


2012-05-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-36:
	  HAC: Object/lang/PRS_rule_attribute.h: new 'res' rule attribute
		to flag that a rule is a fake resistor.


2012-05-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-35:
	  hacprsim: channel-expect-fail against X vs. expected non-X
		was failing to advance vector index.  Fixed.  Tests added.


2012-05-17	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-34:
	  hacprsim: clocked channels were not advancing expect vector
		indices when data received was X.  Fixed.  Test case added.


2012-05-15	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-33:
	  vpi-prsim: treat syntax and argument errors as fatal,
		so that PEBKAC-causes of failure are more obvious.
		Test case added.


2012-05-11	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-32:
	  vpi-prsim: space-stripping now handles verilog escaped identifiers
		by preserving end-of-identifier spaces.  Tested.


	* HACKT-00-01-04-main-00-85-31:
	  hacprsim: channel values files were not searching include paths
	  vpi-prsim: include paths were not being searched for source files
		Both fixed, test cases added.


2012-05-09	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-85-30:
	  global_entry_context reference lookups are now all cached
		hierarchically with the corresponding top-level footprint.
		This brings about significant improvement in reference
		parsing and lookup.  Regression tests clean.

