@@ -3,6 +3,14 @@
 # NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
 # This version tag is used in building "cvstag.h" for version identification.
 
+2012-06-27	David Fang		<fangism@users.sourceforge.net>
+
+	* HACKT-00-01-04-main-00-85-38:
+	  prsim/State-prsim.cc: event on event queue exception, 
+		keep event queue free-list coherent for cleaner exiting.
+	  vpi-prsim.cc: on exception thrown, call _vpi_finish().
+
+
 2012-05-30	David Fang		<fangism@users.sourceforge.net>
 
 	* HACKT-00-01-04-main-00-85-37:
